terraform/network/main.tf
//Public networks

resource "aws_vpc" "main_vpc" {
  cidr_block       = "10.0.0.0/16"
  enable_dns_support = true
  enable_dns_hostnames = true

  tags = {
    Name = "main_vpc"
  }
}

resource "aws_subnet" "alb_public_subnet_one" {
  vpc_id     = aws_vpc.main_vpc.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "eu-west-2a"

  tags = {
    Name = "ALB_pub_sub_one"
  }
}

resource "aws_subnet" "alb_public_subnet_two" {
  vpc_id     = aws_vpc.main_vpc.id
  cidr_block = "10.0.2.0/24"
  availability_zone = "eu-west-2b"

  tags = {
    Name = "ALB_pub_sub_two"
  }
}

resource "aws_internet_gateway" "main_vpc_igw" {
  vpc_id = aws_vpc.main_vpc.id

  tags = {
    Name = "main"
  }
}

resource "aws_route_table" "main_pub_sub_route_table" {
  vpc_id = aws_vpc.main_vpc.id

  route {
    cidr_block = var.allow_all_CIDR
    gateway_id = aws_internet_gateway.main_vpc_igw.id
  }

}

resource "aws_route_table_association" "alb_pub_sub_one_assocation" {
  subnet_id      = aws_subnet.alb_public_subnet_one.id
  route_table_id = aws_route_table.main_pub_sub_route_table.id
}

resource "aws_route_table_association" "alb_pub_sub_two_assocation" {
  subnet_id      = aws_subnet.alb_public_subnet_two.id
  route_table_id = aws_route_table.main_pub_sub_route_table.id
}

//Private networks

resource "aws_subnet" "ecs_private_subnet_one" {
  vpc_id     = aws_vpc.main_vpc.id
  cidr_block = "10.0.3.0/24"
  availability_zone = "eu-west-2a"

  tags = {
    Name = "ECS_priv_sub"
  }
}

resource "aws_subnet" "ecs_private_subnet_two" {
  vpc_id     = aws_vpc.main_vpc.id
  cidr_block = "10.0.4.0/24"
  availability_zone = "eu-west-2b"

  tags = {
    Name = "ECS_priv_sub"
  }
}

resource "aws_route_table" "main_priv_sub_route_table" {
  vpc_id = aws_vpc.main_vpc.id
}

resource "aws_route_table_association" "ecs_priv_sub_one_association" {
  subnet_id      = aws_subnet.ecs_private_subnet_one.id
  route_table_id = aws_route_table.main_priv_sub_route_table.id
}

resource "aws_route_table_association" "ecs_priv_sub_two_association" {
  subnet_id      = aws_subnet.ecs_private_subnet_two.id
  route_table_id = aws_route_table.main_priv_sub_route_table.id
}

resource "aws_vpc_endpoint" "dynamodb_vpc_endpoint" {
  vpc_id       = aws_vpc.main_vpc.id
  service_name = "com.amazonaws.eu-west-2.dynamodb"
  vpc_endpoint_type = "Gateway"

  tags = {
    Name = "DynamoDB VPC Endpoint"
  }
}

resource "aws_vpc_endpoint" "s3_endpoint" {
  vpc_id       = aws_vpc.main_vpc.id
  service_name = "com.amazonaws.eu-west-2.s3"
  vpc_endpoint_type = "Gateway"

  tags = {
    Name = "S3 Endpoint"
  }
}

resource "aws_route" "s3_vpce_route" {
  route_table_id         = aws_route_table.main_priv_sub_route_table.id
  destination_prefix_list_id = aws_vpc_endpoint.s3_endpoint.prefix_list_id
  vpc_endpoint_id        = aws_vpc_endpoint.s3_endpoint.id
}

resource "aws_route" "dynamodb_vpce_route" {
  route_table_id         = aws_route_table.main_priv_sub_route_table.id
  destination_prefix_list_id = aws_vpc_endpoint.dynamodb_vpc_endpoint.prefix_list_id
  vpc_endpoint_id        = aws_vpc_endpoint.dynamodb_vpc_endpoint.id
}


resource "aws_vpc_endpoint" "ecr_dkr_interface_vpc_endpoint" {
  vpc_id            = aws_vpc.main_vpc.id
  service_name      = "com.amazonaws.eu-west-2.ecr.dkr"
  vpc_endpoint_type = "Interface"

  security_group_ids = [
    aws_security_group.ecr_vpc_endpoint_sg.id
  ]

  subnet_ids = [aws_subnet.ecs_private_subnet_one.id, aws_subnet.ecs_private_subnet_two.id]

  private_dns_enabled = true

  tags = {
    Name = "ECR VPC Endpoint"
  }
}

resource "aws_vpc_endpoint" "ecr_api_interface_vpc_endpoint" {
  vpc_id            = aws_vpc.main_vpc.id
  service_name      = "com.amazonaws.eu-west-2.ecr.api"
  vpc_endpoint_type = "Interface"

  security_group_ids = [
    aws_security_group.ecr_vpc_endpoint_sg.id
  ]

  subnet_ids = [aws_subnet.ecs_private_subnet_one.id, aws_subnet.ecs_private_subnet_two.id]

  private_dns_enabled = true

  tags = {
    Name = "ECR API VPC Endpoint"
  }
}

resource "aws_vpc_endpoint_policy" "ecr_api_endpoint_policy" {
  vpc_endpoint_id = aws_vpc_endpoint.ecr_api_interface_vpc_endpoint.id
  policy = jsonencode({
    "Version" : "2012-10-17",
    "Statement": [
    {
			"Sid": "AllowAll",
			"Effect": "Allow",
			"Principal": "*",
			"Action": "*",
			"Resource": "*"
		},
		{
			"Sid": "PreventDelete",
			"Effect": "Deny",
			"Principal": "*",
			"Action": "ecr:DeleteRepository",
			"Resource": "arn:aws:ecr:eu-west-2:174558992457:repository/elastic_app_v2"
		}
	]
  })
}

resource "aws_vpc_endpoint_policy" "ecr_dkr_vpc_endpoint_policy" {
  vpc_endpoint_id = aws_vpc_endpoint.ecr_dkr_interface_vpc_endpoint.id

  policy = jsonencode({
    "Version" : "2012-10-17",
    "Statement" : [
      {
        "Effect" : "Allow",
        "Principal" : "*",
        "Action" : [
          "ecr:GetDownloadUrlForLayer",
          "ecr:BatchGetImage",
          "ecr:BatchCheckLayerAvailability"
        ],
        "Resource" : "*"
      }
    ]
  })
}

//Security groups
resource "aws_security_group" "alb_sg" {
  vpc_id = aws_vpc.main_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = [var.allow_all_CIDR]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = [var.allow_all_CIDR]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"  
    cidr_blocks = [var.allow_all_CIDR]
  }

  tags = {
    Name = "ALB Security Group"
  }
}

resource "aws_security_group" "ecs_task_sg" {
  vpc_id = aws_vpc.main_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"  
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ECS security group"
  }
}

resource "aws_security_group" "ecr_vpc_endpoint_sg" {
  vpc_id = aws_vpc.main_vpc.id

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    security_groups = [aws_security_group.ecs_task_sg.id] 
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"  
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ECR VPC Endpoint Security Group"
  }
}
